2013-02-8  Joerg Desch  <jdesch@users.sourceforge.net>

	Fix the Makefile to work with the toolchain of Ubuntu 12.10

2012-02-22  Joerg Desch  <jdesch@users.sourceforge.net>

	* Makefile: quick fix for build of file in subdirectories. The next step
	well be support for GNU autotools.

2011-10-10  Joerg Desch  <jdesch@users.sourceforge.net>

	* Makefile: added support for CROSS_COMPILE define.

2011-04-12  Joerg Desch  <jdesch@users.sourceforge.net>

	* ezV24.h: converted from DOC++ to Doxygen. Fixed a bug in the description
	of v24OpenPort, where V24_NON_BLOCK was wrong documented.

	* manual.dxx: converted from DOC++ to Doxygen.

2011-04-11  Joerg Desch  <jdesch@users.sourceforge.net>

	* removed the RCS log entries in the top comment of all files. Many
	  typos and "german english" has been fixes.

	* ezV24.c (createLockFile): the function now set the umask to
	strip unnecessary access rights.

2006-06-03  Joerg Desch  <jdesch@users.sourceforge.net>

	* Makefile (SORELEASE): changed API forces an increment here.
	(PATCHLEVEL): incremented by 1.


2006-06-03  Joerg Desch  <jdesch@users.sourceforge.net>

	* snprintf.c (v24_vsnprintf): init some local variables.

	* Makefile: added a patch of Kai Blin
	<nowhere@users.sourceforge.net> to fix some minor problems with
	Fedora.


2004-10-07  Celso Kopp Webber <celso@webbertek.com.br>

	* ezV24.h: Added __EZV24_STATUS_FLAGS, V24_DTR_LOW, V24_DTR_HIGH,
        V24_RTS_LOW, V24_RTS_HIGH.
        (v24GetDSR): Added function prototype.
        (v24GetCTS): Added function prototype.

	* ezV24.c: Implemented (v24GetDSR) and (v24GetCTS) functions.
	(v24OpenPort): Added V24_SYNC open flag support.
	(v24Write): Used tcdrain() to enforce the V24_SYNC option.


2003-10-13  Joerg Desch  <jdesch@users.sourceforge.net>

	* README (http): shame on me... wrong URL fixed.

	* Makefile (test-v24): add -DUNINSTALLED to the rule for test-v24.


2003-02-11  Joerg Desch  <jdesch@users.sourceforge.net>
