@@ -1,3 +1,7 @@
+2017-05-16 Joerg Desch <github@jdesch.de>
+
+	Fix snprintf.c to remove a warning.
+
 2013-02-8  Joerg Desch  <jdesch@users.sourceforge.net>
 
 	Fix the Makefile to work with the toolchain of Ubuntu 12.10
